--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -56,8 +56,8 @@
                     <h2 class="title">Đăng ký</h2>
                     {{#if messagesignup}}
                         <script>
-                            const container = document.querySelector(".container");
-                            container.classList.add("sign-up-mode");
+                            const container1 = document.querySelector(".container");
+                            container1.classList.add("sign-up-mode");
                         </script>
                         <div class="error-message">
                             {{messagesignup}}
