--- a/src/resources/views/playsingle.hbs
+++ b/src/resources/views/playsingle.hbs
@@ -26,6 +26,11 @@
             </div>
             <div class="play-area">
                 <div class="info">
+                    <div class="btn-back" id="btn_back">
+                        <a href="/home">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </a>
+                    </div>
                     <div class="round-info">
                         Round<br>
                         <h3 id="Round_play">1/10</h3>
@@ -43,7 +48,7 @@
                         <h3 id="Point_play">0</h3>
                     </div>
                     
-                    </div>
+                </div>
                 
                 <div class="disc">
                     {{!-- <audio src="data:audio/mpeg;base64,{{curSong.content}}" id="audio" autoplay controls></audio> --}}
