--- a/src/assets/playweb.css
+++ b/src/assets/playweb.css
@@ -87,6 +87,29 @@ body {
     justify-content: space-evenly;
 }
 
+.container .play-area .info .btn-back {
+    margin-top: 1.75rem;
+    width: 2.6vw;
+    height: 2.6vw;
+    background-color: #fff;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: #f53192;
+    cursor: pointer;
+}
+.container .play-area .info .btn-back a{
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+.container .play-area .info .btn-back:hover {
+    transform: scale(1.5);
+    background-color: #f53192;
+    color: #fff;
+}
+
 .container .play-area .info .round-info {
     line-height: 2em;
     display: flex;
