--- a/src/resources/views/sendverifymail.hbs
+++ b/src/resources/views/sendverifymail.hbs
@@ -20,10 +20,22 @@
             }
             html {
                 height: 100vh;
-                background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
+                background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236)); --}}
                 display: flex;
                 align-items: center;
                 justify-content: center;
+            }
+
+            body {
+                align-items: center;
+                justify-content: center;
+                display: flex;
+                position: relative;
+                font-family: neosans;
+                /* background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168, 98, 230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69, 6, 191), rgb(61, 7, 185), rgb(65, 19, 185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236)); */
+                height: 100vh;
+                background-repeat: no-repeat;
+                background-size: cover;
             }
 
             .container {
