--- a/src/resources/views/playmulti.hbs
+++ b/src/resources/views/playmulti.hbs
@@ -31,7 +31,7 @@
                     </div>
                     <div class="round-time">
                         <div class="btn-back" id="btn_back">
-                            <a href="/home">
+                            <a href="/home" id="href_back">
                                 <i class="fa-solid fa-arrow-left"></i>
                             </a>
                         </div>
